Switch to Java 21 and initial MC-1.21 support