@@ -29,7 +29,7 @@ public class BankSign implements SignShopOperation {
         } else {
             StringBuilder profitshops = new StringBuilder();
             boolean first = true;
-            Block bLast = shops.get(shops.size()-1);
+            Block bLast = shops.getLast();
             for(Block bTemp : shops) {
                 Location loc = bTemp.getLocation();
                 if(first) first = false;
@@ -45,7 +45,7 @@ public class BankSign implements SignShopOperation {
             if(!signshopUtil.lineIsEmpty(lines[1])) names.add(lines[1]);
             if(!signshopUtil.lineIsEmpty(lines[2])) names.add(lines[2]);
             first = true;
-            String sLast = names.get(names.size()-1);
+            String sLast = names.getLast();
             for(String sTemp : names) {
                 if(first) first = false;
                 else if (!sLast.equals(sTemp)) profits.append(", ");//TODO fix this
